fix: Remove Java 8 JVM arguments from settings